// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`upload Studio CMS assets on push of Studio enabled project uploads expected CMS assets to shared location in S3 bucket 2`] = `
"export const schema = {
    \\"models\\": {
        \\"Todo\\": {
            \\"name\\": \\"Todo\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todos\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ]
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {},
    \\"codegenVersion\\": \\"3.3.4\\",
    \\"version\\": \\"6f85ca0ee370ac8e0674a44cc5a4f6a6\\"
};"
`;

exports[`upload Studio CMS assets on push of Studio enabled project uploads expected CMS assets to shared location in S3 bucket 3`] = `
"{
    \\"version\\": 1,
    \\"models\\": {
        \\"Todo\\": {
            \\"name\\": \\"Todo\\",
            \\"fields\\": {
                \\"id\\": {
                    \\"name\\": \\"id\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"ID\\",
                    \\"isRequired\\": true,
                    \\"attributes\\": []
                },
                \\"content\\": {
                    \\"name\\": \\"content\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"String\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": []
                },
                \\"createdAt\\": {
                    \\"name\\": \\"createdAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                },
                \\"updatedAt\\": {
                    \\"name\\": \\"updatedAt\\",
                    \\"isArray\\": false,
                    \\"type\\": \\"AWSDateTime\\",
                    \\"isRequired\\": false,
                    \\"attributes\\": [],
                    \\"isReadOnly\\": true
                }
            },
            \\"syncable\\": true,
            \\"pluralName\\": \\"Todos\\",
            \\"attributes\\": [
                {
                    \\"type\\": \\"model\\",
                    \\"properties\\": {}
                }
            ],
            \\"primaryKeyInfo\\": {
                \\"isCustomPrimaryKey\\": false,
                \\"primaryKeyFieldName\\": \\"id\\",
                \\"sortKeyFieldNames\\": []
            }
        }
    },
    \\"enums\\": {},
    \\"nonModels\\": {}
}"
`;
